{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 16,
  "lineage": "d69b22c8-3e29-4fca-ff84-7a79ee904f88",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "medusa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430118850209:internet-gateway/igw-0d75d9c88c4478ecb",
            "id": "igw-0d75d9c88c4478ecb",
            "owner_id": "430118850209",
            "vpc_id": "vpc-0de6cb85251c2d7d8"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "medusa_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430118850209:route-table/rtb-0ce3f922a070e81e9",
            "id": "rtb-0ce3f922a070e81e9",
            "owner_id": "430118850209",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d75d9c88c4478ecb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de6cb85251c2d7d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.medusa_igw",
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019ac65880efe1fea",
            "route_table_id": "rtb-0ce3f922a070e81e9",
            "subnet_id": "subnet-0cd23732248cf88b5"
          },
          "dependencies": [
            "aws_internet_gateway.medusa_igw",
            "aws_route_table.medusa_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.medusa_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e6d08a009ab3390",
            "route_table_id": "rtb-0ce3f922a070e81e9",
            "subnet_id": "subnet-09a0503de4961d72f"
          },
          "dependencies": [
            "aws_internet_gateway.medusa_igw",
            "aws_route_table.medusa_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430118850209:security-group/sg-050b2af365fb11629",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050b2af365fb11629",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "430118850209",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de6cb85251c2d7d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "medusa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430118850209:security-group/sg-0690b33f08a870681",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0690b33f08a870681",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "medusa_sg",
            "name_prefix": "",
            "owner_id": "430118850209",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de6cb85251c2d7d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430118850209:subnet/subnet-0cd23732248cf88b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd23732248cf88b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430118850209",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0de6cb85251c2d7d8"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430118850209:subnet/subnet-09a0503de4961d72f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a0503de4961d72f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430118850209",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0de6cb85251c2d7d8"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "medusa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:430118850209:vpc/vpc-0de6cb85251c2d7d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-087da99ea064b4f7c",
            "default_route_table_id": "rtb-0a657e8d66a674235",
            "default_security_group_id": "sg-04db3fc633bed5852",
            "dhcp_options_id": "dopt-014744fe9e53ebf47",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de6cb85251c2d7d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a657e8d66a674235",
            "owner_id": "430118850209"
          }
        }
      ]
    }
  ]
}